# othr_gtkmm_mpd_client

./: .gitignore  .gitmodules  CMakeLists.txt  player.glade  readme.md
src/: CMakeLists.txt  graphical_user_interface.cc  graphical_user_interface.hh  libmpd_helper.cc  libmpd_helper.hh  main.cc  player.glade  signal_handler.cc  song_info.cc  songlist_columns.cc  songlist_columns.hh
src/configs/: mpd_config.hh
src/controllers/: libmpd_helper.cc  libmpd_helper.hh  mpd_playback_controller.cc  mpd_playback_controller.hh  playback_controller.cc  playback_controller.hh  refresh_controller.cc  refresh_controller.hh  signal_handler.hh  voice_controller.cc  voice_controller.hh
src/models/: song_info.cc  song_info.hh
src/other_modules/natural_language_interface/: README.md  main.py  main_cpp.py
src/other_modules/natural_language_interface/MPD_NLP/locust/: locustfile.py
src/other_modules/natural_language_interface/MPD_NLP/service/: conversationState.py  mpd_provider_module.py  parse.py  parse_cpp.py  response.py
src/other_modules/natural_language_interface/audio/: audio_data.py  audio_file.py  audio_file_stream.py  microphone.py  recognizer.py
src/other_modules/natural_language_interface/music_player/: mpd_connection.py
src/other_modules/natural_language_interface/resources/: supported_languages.py
src/other_modules/natural_language_interface/speech_control/: speech_to_text.py  text_to_speech.py
src/other_modules/natural_language_interface/ympd_webclient/: README.md
src/other_modules/natural_language_interface/ympd_webclient/htdocs/: index.html
src/viewmodels/: graphical_user_interface.cc  graphical_user_interface.hh  songlist_columns.cc  songlist_columns.hh
src/views/: player.glade
(+3 files in other folders)
